# policy-as-code-engine

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: example-bundle.yaml  example-context.json
src/policy_as_code_engine/: __init__.py  __main__.py  app.py  audit_stream.py  evaluator.py  from_decision_card.py  loader.py  models.py
tests/: test_app.py  test_audit_stream.py  test_evaluator.py  test_from_decision_card.py  test_loader.py  test_models.py
